tests/files/flow_controller_tests/should_run/052.cmdr
x = 7.3890561;
print ln(x);