tests/files/flow_controller_tests/should_fail/024.cmdr
x = false;
print ln(x);